--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,8 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -39,7 +40,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'com.asksira.android:bsimagepicker:1.1.0'
 }
