--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,7 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'com.asksira.android:bsimagepicker:1.1.0'
+
+    implementation 'com.squareup.okio:okio:2.0.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
 }
